// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CrowdfundingCard /> CrowdfundingCard props matches with snapshot 1`] = `
.c1 {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  cursor: pointer;
  border: 0;
  padding: 0;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.8;
}

.c1.k-ButtonImage--tiny {
  width: 1.875rem;
  height: 1.875rem;
}

.c1.k-ButtonImage--huge {
  width: 5rem;
  height: 5rem;
}

.c1.k-ButtonImage--withoutPointerEvents {
  pointer-events: none;
}

.c1.k-ButtonImage--withBorder {
  border: 0.125rem solid var(--color-grey-300,#eee);
}

.c1 .k-ButtonImage__img {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c2 {
  max-width: 100%;
}

.c2 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: var(--color-grey-300,#eee);
}

.c2 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 0%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: var(--color-primary-500,#19b4fa);
}

.c2.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c2.is-disabled .k-Meters-Progress__ramp::after {
  background: var(--color-grey-400,#d8d8d8);
}

.c2.k-Meters-Progress--orion .k-Meters-Progress__ramp,
.c2.k-Meters-Progress--orion .k-Meters-Progress__ramp::after {
  border-radius: 0.1875rem;
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
  overflow: hidden;
  display: block;
  background: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0[href] {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.c0[href] .k-CrowdfundingCard__image__image {
  -webkit-transition: -webkit-transform 0.4s ease-in-out;
  -webkit-transition: transform 0.4s ease-in-out;
  transition: transform 0.4s ease-in-out;
}

.c0[href] .k-CrowdfundingCard__title__title {
  -webkit-transition: color 0.4s ease-in-out;
  transition: color 0.4s ease-in-out;
}

.c0[href]:hover .k-CrowdfundingCard__image__image,
.c0[href]:focus .k-CrowdfundingCard__image__image {
  -webkit-transform: scale(1.07);
  -ms-transform: scale(1.07);
  transform: scale(1.07);
}

.c0[href]:hover .k-CrowdfundingCard__title__title,
.c0[href]:focus .k-CrowdfundingCard__title__title {
  color: var(--color-primary-500,#19b4fa);
}

.c0 .k-CrowdfundingCard__paddedContainer {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__noWrap {
  white-space: nowrap;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  position: relative;
}

.c0 .k-CrowdfundingCard__image__imageContainer > .k-CrowdfundingCard__image__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  text-align: center;
}

.c0 .k-CrowdfundingCard__image__avatar {
  margin-left: 0.625rem;
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0 .k-CrowdfundingCard__image__owner {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: none;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: var(--color-grey-000,#fff);
}

.c0 .k-CrowdfundingCard__title {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 0.875rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  height: 1.5rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement:last-of-type {
  width: 70%;
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: none;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText {
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText.k-CrowdfundingCard__subtitle__subtitleText--truncated {
  white-space: nowrap;
  overflow: hidden;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo > * {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .k-CrowdfundingCard__subtitle__horizontalStroke {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c0 .k-CrowdfundingCard__subtitle__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  width: 5rem;
  height: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 0.9375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 0.9375rem;
  margin-bottom: 0.3125rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__informations__info {
  font-size: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 2.5rem;
  height: 1rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement:last-of-type {
  width: 4.0625rem;
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c0 .k-CrowdfundingCard__progressBar__progress {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c0 .k-CrowdfundingCard__loading {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background: linear-gradient( 90deg,rgba(0,0,0,0),rgba(255,255,255,0.3),rgba(0,0,0,0) );
  -webkit-animation: x 1s linear infinite;
  animation: x 1s linear infinite;
  -webkit-animation-name: linDdK;
  animation-name: linDdK;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__title {
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 4.375rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__subtitle__horizontalStroke {
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__description {
  background-color: var(--color-grey-400,#d8d8d8);
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  width: 6.25rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__progressBar__loadingPercent {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 2.5rem;
  height: 1rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__cardButton__loadingButton {
  background-color: var(--color-grey-400,#d8d8d8);
  border-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 3.125rem;
}

.c0.k-CrowdfundingCard--isStretched {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0.k-CrowdfundingCard--isStretched .k-CrowdfundingCard__titleAndDesc {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .k-CrowdfundingCard__state {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  background-color: var(--color-grey-000,#fff);
  padding: 0.625rem;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__widgetState {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: var(--color-grey-900,#222);
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  padding-top: calc( (0.625) * 100% );
}

@media (min-width:640px) {
  .c1.k-ButtonImage--big {
    width: 3.125rem;
    height: 3.125rem;
  }
}

@media (min-width:40rem) {
  .c0 .k-CrowdfundingCard__image__ownerContainer {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 .k-CrowdfundingCard__title {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__title__title {
    font-size: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__subtitle__container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    line-height: 1;
    padding: 0 0.625rem;
    margin-top: 0.625rem;
  }

  .c0 .k-CrowdfundingCard__additionalInfo {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations {
    margin-top: 1.25rem;
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer {
    margin-right: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
    margin-right: 0;
  }

  .c0 .k-CrowdfundingCard__progressBar {
    padding: 0 0.625rem;
    margin-bottom: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__progressBar__percent {
    display: inherit;
  }

  .c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
    min-height: 4.6875rem;
  }

  .c0 .k-CrowdfundingCard__state {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  className="c0 k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover k-CrowdfundingCard--titlesMinHeight k-CrowdfundingCard--isStretched"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={null}
    >
      <img
        alt=""
        className="k-CrowdfundingCard__image__image"
        src="#image"
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="c1 k-ButtonImage k-ButtonImage--regular k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="#image"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner k-u-margin-top-single"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Owner title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Owner description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  <div
    className="k-CrowdfundingCard__informations"
  >
    <div
      className="k-CrowdfundingCard__informations__infoContainer"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-weight-light k-CrowdfundingCard__informations__info"
      >
        Lorem ipsum…
      </span>
    </div>
    <div
      className="k-CrowdfundingCard__informations__infoContainer"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-weight-light k-CrowdfundingCard__informations__info"
      >
        Lorem ipsum…
      </span>
    </div>
    <div
      className="k-CrowdfundingCard__informations__infoContainer"
    >
      <span
        className="k-u-color-font1 k-u-line-height-normal k-u-weight-light k-CrowdfundingCard__informations__info"
      >
        Lorem ipsum…
      </span>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__progressBar"
  >
    <div
      aria-label="Crowdfunding progress"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="c2 k-Meters-Progress k-CrowdfundingCard__progressBar__progress k-Meters-Progress--orion"
      role="progressbar"
    >
      <div
        className="k-Meters-Progress__ramp"
        style={
          Object {
            "height": "4px",
          }
        }
      />
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__progressBar__percent"
    >
      42 %
    </span>
  </div>
  <div
    className="k-CrowdfundingCard__state"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Lorem ipsum…
    </span>
  </div>
  
</div>
`;

exports[`<CrowdfundingCard /> CrowdfundingCard with buttonText prop matches with snapshot 1`] = `
.c1 {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  cursor: pointer;
  border: 0;
  padding: 0;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.8;
}

.c1.k-ButtonImage--tiny {
  width: 1.875rem;
  height: 1.875rem;
}

.c1.k-ButtonImage--huge {
  width: 5rem;
  height: 5rem;
}

.c1.k-ButtonImage--withoutPointerEvents {
  pointer-events: none;
}

.c1.k-ButtonImage--withBorder {
  border: 0.125rem solid var(--color-grey-300,#eee);
}

.c1 .k-ButtonImage__img {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: 0.125rem solid var(--color-primary-500,#19b4fa);
  background-color: var(--color-primary-500,#19b4fa);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c2:disabled,
.c2.k-Button--disabled {
  cursor: not-allowed;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:focus-visible {
  outline: auto;
}

.c2.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c2.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c2.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c2.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c2.k-Button--big {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c2.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c2.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c2.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c2.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c2.k-Button--fit-fluid {
  width: 100%;
}

.c2.k-Button--orion:not(.k-Button--rounded).k-Button--nano,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--micro,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--tiny {
  --Button-border-radius: 0.25rem;
}

.c2.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--big,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
  --Button-border-radius: 0.375rem;
}

.c2.k-Button--rounded {
  --Button-border-radius: var(--Button-dimension);
}

.c2 svg:not(.k-ColorSvg),
.c2 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c2:hover,
.c2:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c2:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c2:disabled,
.c2.k-Button--disabled {
  border-color: var(--color-grey-400,#d8d8d8);
  background-color: var(--color-grey-400,#d8d8d8);
  color: var(--color-grey-000,#fff);
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
  overflow: hidden;
  display: block;
  background: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0[href] {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.c0[href] .k-CrowdfundingCard__image__image {
  -webkit-transition: -webkit-transform 0.4s ease-in-out;
  -webkit-transition: transform 0.4s ease-in-out;
  transition: transform 0.4s ease-in-out;
}

.c0[href] .k-CrowdfundingCard__title__title {
  -webkit-transition: color 0.4s ease-in-out;
  transition: color 0.4s ease-in-out;
}

.c0[href]:hover .k-CrowdfundingCard__image__image,
.c0[href]:focus .k-CrowdfundingCard__image__image {
  -webkit-transform: scale(1.07);
  -ms-transform: scale(1.07);
  transform: scale(1.07);
}

.c0[href]:hover .k-CrowdfundingCard__title__title,
.c0[href]:focus .k-CrowdfundingCard__title__title {
  color: var(--color-primary-500,#19b4fa);
}

.c0 .k-CrowdfundingCard__paddedContainer {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__noWrap {
  white-space: nowrap;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  position: relative;
}

.c0 .k-CrowdfundingCard__image__imageContainer > .k-CrowdfundingCard__image__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  text-align: center;
}

.c0 .k-CrowdfundingCard__image__avatar {
  margin-left: 0.625rem;
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0 .k-CrowdfundingCard__image__owner {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: none;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: var(--color-grey-000,#fff);
}

.c0 .k-CrowdfundingCard__title {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 0.875rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  height: 1.5rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement:last-of-type {
  width: 70%;
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: none;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText {
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText.k-CrowdfundingCard__subtitle__subtitleText--truncated {
  white-space: nowrap;
  overflow: hidden;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo > * {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .k-CrowdfundingCard__subtitle__horizontalStroke {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c0 .k-CrowdfundingCard__subtitle__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  width: 5rem;
  height: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 0.9375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 0.9375rem;
  margin-bottom: 0.3125rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__informations__info {
  font-size: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 2.5rem;
  height: 1rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement:last-of-type {
  width: 4.0625rem;
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c0 .k-CrowdfundingCard__progressBar__progress {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c0 .k-CrowdfundingCard__loading {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background: linear-gradient( 90deg,rgba(0,0,0,0),rgba(255,255,255,0.3),rgba(0,0,0,0) );
  -webkit-animation: x 1s linear infinite;
  animation: x 1s linear infinite;
  -webkit-animation-name: linDdK;
  animation-name: linDdK;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__title {
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 4.375rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__subtitle__horizontalStroke {
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__description {
  background-color: var(--color-grey-400,#d8d8d8);
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  width: 6.25rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__progressBar__loadingPercent {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 2.5rem;
  height: 1rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__cardButton__loadingButton {
  background-color: var(--color-grey-400,#d8d8d8);
  border-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 3.125rem;
}

.c0.k-CrowdfundingCard--isStretched {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0.k-CrowdfundingCard--isStretched .k-CrowdfundingCard__titleAndDesc {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .k-CrowdfundingCard__state {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  background-color: var(--color-grey-000,#fff);
  padding: 0.625rem;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__widgetState {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: var(--color-grey-900,#222);
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  padding-top: calc( (0.625) * 100% );
}

@media (min-width:640px) {
  .c1.k-ButtonImage--big {
    width: 3.125rem;
    height: 3.125rem;
  }
}

@media (min-width:40rem) {
  .c2.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c2.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c2.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c2[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c2[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c2[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c2[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c2.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
  .c2.k-Button--orion:not(.k-Button--rounded).k-Button--big,
  .c2.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
  .c2.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
    --Button-border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 .k-CrowdfundingCard__image__ownerContainer {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 .k-CrowdfundingCard__title {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__title__title {
    font-size: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__subtitle__container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    line-height: 1;
    padding: 0 0.625rem;
    margin-top: 0.625rem;
  }

  .c0 .k-CrowdfundingCard__additionalInfo {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations {
    margin-top: 1.25rem;
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer {
    margin-right: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
    margin-right: 0;
  }

  .c0 .k-CrowdfundingCard__progressBar {
    padding: 0 0.625rem;
    margin-bottom: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__progressBar__percent {
    display: inherit;
  }

  .c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
    min-height: 4.6875rem;
  }

  .c0 .k-CrowdfundingCard__state {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  className="c0 k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover k-CrowdfundingCard--titlesMinHeight"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={null}
    >
      <img
        alt=""
        className="k-CrowdfundingCard__image__image"
        src="#image"
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="c1 k-ButtonImage k-ButtonImage--regular k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="#image"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner k-u-margin-top-single"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Owner title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Owner description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  <div
    className="k-CrowdfundingCard__cardButton k-CrowdfundingCard__paddedContainer"
  >
    <button
      className="c2 k-Button k-Button--regular k-Button--helium k-Button--orion k-Button--fit-fluid"
      style={
        Object {
          "--Button-border-radius": null,
        }
      }
      type="button"
    >
      Contribute
    </button>
  </div>
  <div
    className="k-CrowdfundingCard__state"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Sur
    </span>
  </div>
  
</div>
`;

exports[`<CrowdfundingCard /> CrowdfundingCard with forceVersion prop matches with snapshot 1`] = `
.c1 {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  cursor: pointer;
  border: 0;
  padding: 0;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c1:hover,
.c1:focus {
  opacity: 0.8;
}

.c1.k-ButtonImage--tiny {
  width: 1.875rem;
  height: 1.875rem;
}

.c1.k-ButtonImage--huge {
  width: 5rem;
  height: 5rem;
}

.c1.k-ButtonImage--withoutPointerEvents {
  pointer-events: none;
}

.c1.k-ButtonImage--withBorder {
  border: 0.125rem solid var(--color-grey-300,#eee);
}

.c1 .k-ButtonImage__img {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c2 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: 0.125rem solid var(--color-primary-500,#19b4fa);
  background-color: var(--color-primary-500,#19b4fa);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c2:disabled,
.c2.k-Button--disabled {
  cursor: not-allowed;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:focus-visible {
  outline: auto;
}

.c2.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c2.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c2.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c2.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c2.k-Button--big {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c2.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c2.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c2.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c2.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c2.k-Button--fit-fluid {
  width: 100%;
}

.c2.k-Button--orion:not(.k-Button--rounded).k-Button--nano,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--micro,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--tiny {
  --Button-border-radius: 0.25rem;
}

.c2.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--big,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
.c2.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
  --Button-border-radius: 0.375rem;
}

.c2.k-Button--rounded {
  --Button-border-radius: var(--Button-dimension);
}

.c2 svg:not(.k-ColorSvg),
.c2 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c2:hover,
.c2:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c2:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c2:disabled,
.c2.k-Button--disabled {
  border-color: var(--color-grey-400,#d8d8d8);
  background-color: var(--color-grey-400,#d8d8d8);
  color: var(--color-grey-000,#fff);
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
  overflow: hidden;
  display: block;
  background: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0[href] {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.c0[href] .k-CrowdfundingCard__image__image {
  -webkit-transition: -webkit-transform 0.4s ease-in-out;
  -webkit-transition: transform 0.4s ease-in-out;
  transition: transform 0.4s ease-in-out;
}

.c0[href] .k-CrowdfundingCard__title__title {
  -webkit-transition: color 0.4s ease-in-out;
  transition: color 0.4s ease-in-out;
}

.c0[href]:hover .k-CrowdfundingCard__image__image,
.c0[href]:focus .k-CrowdfundingCard__image__image {
  -webkit-transform: scale(1.07);
  -ms-transform: scale(1.07);
  transform: scale(1.07);
}

.c0[href]:hover .k-CrowdfundingCard__title__title,
.c0[href]:focus .k-CrowdfundingCard__title__title {
  color: var(--color-primary-500,#19b4fa);
}

.c0 .k-CrowdfundingCard__paddedContainer {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__noWrap {
  white-space: nowrap;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  position: relative;
}

.c0 .k-CrowdfundingCard__image__imageContainer > .k-CrowdfundingCard__image__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  text-align: center;
}

.c0 .k-CrowdfundingCard__image__avatar {
  margin-left: 0.625rem;
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0 .k-CrowdfundingCard__image__owner {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: none;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: var(--color-grey-000,#fff);
}

.c0 .k-CrowdfundingCard__title {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 0.875rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  height: 1.5rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement:last-of-type {
  width: 70%;
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: none;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText {
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText.k-CrowdfundingCard__subtitle__subtitleText--truncated {
  white-space: nowrap;
  overflow: hidden;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo > * {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .k-CrowdfundingCard__subtitle__horizontalStroke {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c0 .k-CrowdfundingCard__subtitle__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  width: 5rem;
  height: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 0.9375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 0.9375rem;
  margin-bottom: 0.3125rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__informations__info {
  font-size: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 2.5rem;
  height: 1rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement:last-of-type {
  width: 4.0625rem;
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c0 .k-CrowdfundingCard__progressBar__progress {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c0 .k-CrowdfundingCard__loading {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background: linear-gradient( 90deg,rgba(0,0,0,0),rgba(255,255,255,0.3),rgba(0,0,0,0) );
  -webkit-animation: x 1s linear infinite;
  animation: x 1s linear infinite;
  -webkit-animation-name: linDdK;
  animation-name: linDdK;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__title {
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 4.375rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__subtitle__horizontalStroke {
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__description {
  background-color: var(--color-grey-400,#d8d8d8);
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  width: 6.25rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__progressBar__loadingPercent {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 2.5rem;
  height: 1rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__cardButton__loadingButton {
  background-color: var(--color-grey-400,#d8d8d8);
  border-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 3.125rem;
}

.c0.k-CrowdfundingCard--isStretched {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0.k-CrowdfundingCard--isStretched .k-CrowdfundingCard__titleAndDesc {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .k-CrowdfundingCard__state {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  background-color: var(--color-grey-000,#fff);
  padding: 0.625rem;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__widgetState {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: var(--color-grey-900,#222);
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .k-CrowdfundingCard__title {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 1.25rem;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1;
  padding: 0 0.625rem;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 1.25rem;
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 1.25rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  padding: 0 0.625rem;
  margin-bottom: 1.25rem;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: inherit;
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 4.6875rem;
}

.c0 .k-CrowdfundingCard__state {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  padding-top: calc( (0.625) * 100% );
}

@media (min-width:640px) {
  .c1.k-ButtonImage--big {
    width: 3.125rem;
    height: 3.125rem;
  }
}

@media (min-width:40rem) {
  .c2.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c2.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c2.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c2[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c2[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c2[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c2[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c2.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
  .c2.k-Button--orion:not(.k-Button--rounded).k-Button--big,
  .c2.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
  .c2.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
    --Button-border-radius: 0.5rem;
  }
}

<div
  className="c0 k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover k-CrowdfundingCard--titlesMinHeight"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={null}
    >
      <img
        alt=""
        className="k-CrowdfundingCard__image__image"
        src="#image"
      />
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="c1 k-ButtonImage k-ButtonImage--regular k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="#image"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner k-u-margin-top-single"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Owner title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Owner description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  <div
    className="k-CrowdfundingCard__cardButton k-CrowdfundingCard__paddedContainer"
  >
    <button
      className="c2 k-Button k-Button--regular k-Button--helium k-Button--orion k-Button--fit-fluid"
      style={
        Object {
          "--Button-border-radius": null,
        }
      }
      type="button"
    >
      Contribute
    </button>
  </div>
  <div
    className="k-CrowdfundingCard__state"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Sur
    </span>
  </div>
  
</div>
`;

exports[`<CrowdfundingCard /> CrowdfundingCard with video props matches with snapshot 1`] = `
.c2 {
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  cursor: pointer;
  border: 0;
  padding: 0;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c2:hover,
.c2:focus {
  opacity: 0.8;
}

.c2.k-ButtonImage--tiny {
  width: 1.875rem;
  height: 1.875rem;
}

.c2.k-ButtonImage--huge {
  width: 5rem;
  height: 5rem;
}

.c2.k-ButtonImage--withoutPointerEvents {
  pointer-events: none;
}

.c2.k-ButtonImage--withBorder {
  border: 0.125rem solid var(--color-grey-300,#eee);
}

.c2 .k-ButtonImage__img {
  display: block;
  margin: 0;
  padding: 0;
  border: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.c1::-webkit-media-controls {
  display: none;
}

.c3 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: 0.125rem solid var(--color-primary-500,#19b4fa);
  background-color: var(--color-primary-500,#19b4fa);
  color: var(--color-grey-000,#fff);
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c3:disabled,
.c3.k-Button--disabled {
  cursor: not-allowed;
}

.c3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus-visible {
  outline: auto;
}

.c3.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c3.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c3.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c3.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c3.k-Button--big {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c3.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c3.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c3.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c3.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c3.k-Button--fit-fluid {
  width: 100%;
}

.c3.k-Button--orion:not(.k-Button--rounded).k-Button--nano,
.c3.k-Button--orion:not(.k-Button--rounded).k-Button--micro,
.c3.k-Button--orion:not(.k-Button--rounded).k-Button--tiny {
  --Button-border-radius: 0.25rem;
}

.c3.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
.c3.k-Button--orion:not(.k-Button--rounded).k-Button--big,
.c3.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
.c3.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
  --Button-border-radius: 0.375rem;
}

.c3.k-Button--rounded {
  --Button-border-radius: var(--Button-dimension);
}

.c3 svg:not(.k-ColorSvg),
.c3 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c3:hover,
.c3:focus {
  border-color: var(--color-primary-700,#05a8e6);
  background-color: var(--color-primary-700,#05a8e6);
  color: var(--color-grey-000,#fff);
}

.c3:active {
  border-color: var(--color-primary-900,#0496cc);
  background-color: var(--color-primary-900,#0496cc);
  color: var(--color-grey-000,#fff);
}

.c3:disabled,
.c3.k-Button--disabled {
  border-color: var(--color-grey-400,#d8d8d8);
  background-color: var(--color-grey-400,#d8d8d8);
  color: var(--color-grey-000,#fff);
}

.c0 {
  position: relative;
  padding-bottom: 0.3125rem;
  overflow: hidden;
  display: block;
  background: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0[href] {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: inherit;
}

.c0[href] .k-CrowdfundingCard__image__image {
  -webkit-transition: -webkit-transform 0.4s ease-in-out;
  -webkit-transition: transform 0.4s ease-in-out;
  transition: transform 0.4s ease-in-out;
}

.c0[href] .k-CrowdfundingCard__title__title {
  -webkit-transition: color 0.4s ease-in-out;
  transition: color 0.4s ease-in-out;
}

.c0[href]:hover .k-CrowdfundingCard__image__image,
.c0[href]:focus .k-CrowdfundingCard__image__image {
  -webkit-transform: scale(1.07);
  -ms-transform: scale(1.07);
  transform: scale(1.07);
}

.c0[href]:hover .k-CrowdfundingCard__title__title,
.c0[href]:focus .k-CrowdfundingCard__title__title {
  color: var(--color-primary-500,#19b4fa);
}

.c0 .k-CrowdfundingCard__paddedContainer {
  padding: 0 0.625rem;
}

.c0 .k-CrowdfundingCard__noWrap {
  white-space: nowrap;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  position: relative;
}

.c0 .k-CrowdfundingCard__image__imageContainer > .k-CrowdfundingCard__image__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  text-align: center;
}

.c0 .k-CrowdfundingCard__image__avatar {
  margin-left: 0.625rem;
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0 .k-CrowdfundingCard__image__owner {
  margin-left: 0.625rem;
  margin-right: calc(2 * 0.625rem);
  line-height: 1.2;
}

.c0 .k-CrowdfundingCard__image__ownerContainer {
  display: none;
  position: relative;
  top: 0;
  margin-top: -1.875rem;
  background-color: var(--color-grey-000,#fff);
}

.c0 .k-CrowdfundingCard__title {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0;
  line-height: 1;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__title__title {
  font-size: 0.875rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  height: 1.5rem;
}

.c0 .k-CrowdfundingCard__title__loadingElement:last-of-type {
  width: 70%;
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__subtitle__container {
  display: none;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText {
  line-height: 1.2;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__subtitle__subtitleText.k-CrowdfundingCard__subtitle__subtitleText--truncated {
  white-space: nowrap;
  overflow: hidden;
}

.c0 .k-CrowdfundingCard__additionalInfo {
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.625rem;
}

.c0 .k-CrowdfundingCard__additionalInfo > * {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 .k-CrowdfundingCard__subtitle__horizontalStroke {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0.3125rem 0.625rem 0.3125rem 0;
}

.c0 .k-CrowdfundingCard__subtitle__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  width: 5rem;
  height: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations {
  margin-top: 0.9375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__informations__infoContainer {
  margin-right: 0.9375rem;
  margin-bottom: 0.3125rem;
}

.c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
  margin-right: 0;
}

.c0 .k-CrowdfundingCard__informations__info {
  font-size: 0.75rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 2.5rem;
  height: 1rem;
}

.c0 .k-CrowdfundingCard__informations__loadingElement:last-of-type {
  width: 4.0625rem;
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  border-bottom: 0;
}

.c0 .k-CrowdfundingCard__progressBar {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c0 .k-CrowdfundingCard__progressBar__progress {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 .k-CrowdfundingCard__progressBar__percent {
  display: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: calc(2 * 0.625rem);
}

.c0 .k-CrowdfundingCard__loading {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background: linear-gradient( 90deg,rgba(0,0,0,0),rgba(255,255,255,0.3),rgba(0,0,0,0) );
  -webkit-animation: x 1s linear infinite;
  animation: x 1s linear infinite;
  -webkit-animation-name: linDdK;
  animation-name: linDdK;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__imageContainer {
  overflow: hidden;
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__title {
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 4.375rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__subtitle__horizontalStroke {
  background-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__image__description {
  background-color: var(--color-grey-400,#d8d8d8);
  border-top: 0.0625rem solid var(--color-grey-000,#fff);
  width: 6.25rem;
  height: 0.875rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__progressBar__loadingPercent {
  display: block;
  background-color: var(--color-grey-400,#d8d8d8);
  border-bottom: 0.0625rem solid var(--color-grey-000,#fff);
  width: 2.5rem;
  height: 1rem;
}

.c0.k-CrowdfundingCard--isLoading .k-CrowdfundingCard__cardButton__loadingButton {
  background-color: var(--color-grey-400,#d8d8d8);
  border-color: var(--color-grey-400,#d8d8d8);
}

.c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
  min-height: 3.125rem;
}

.c0.k-CrowdfundingCard--isStretched {
  height: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0.k-CrowdfundingCard--isStretched .k-CrowdfundingCard__titleAndDesc {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .k-CrowdfundingCard__state {
  position: absolute;
  top: 0;
  right: 0;
  display: none;
  background-color: var(--color-grey-000,#fff);
  padding: 0.625rem;
  line-height: 1;
}

.c0 .k-CrowdfundingCard__widgetState {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: var(--color-grey-900,#222);
  border-radius: 1.5625rem;
  margin: 0.625rem 0.625rem 0 0;
  right: 0;
  top: 0;
  padding: 0.625rem 1.25rem;
}

.c0 .k-CrowdfundingCard__image__imageContainer {
  padding-top: calc( (0.625) * 100% );
}

@media (min-width:640px) {
  .c2.k-ButtonImage--big {
    width: 3.125rem;
    height: 3.125rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c3[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c3[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c3[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c3[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c3.k-Button--orion:not(.k-Button--rounded).k-Button--regular,
  .c3.k-Button--orion:not(.k-Button--rounded).k-Button--big,
  .c3.k-Button--orion:not(.k-Button--rounded).k-Button--huge,
  .c3.k-Button--orion:not(.k-Button--rounded).k-Button--giant {
    --Button-border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 .k-CrowdfundingCard__image__ownerContainer {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }

  .c0 .k-CrowdfundingCard__title {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__title__title {
    font-size: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__subtitle__container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    line-height: 1;
    padding: 0 0.625rem;
    margin-top: 0.625rem;
  }

  .c0 .k-CrowdfundingCard__additionalInfo {
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations {
    margin-top: 1.25rem;
    padding: 0 0.625rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer {
    margin-right: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__informations__infoContainer:last-child {
    margin-right: 0;
  }

  .c0 .k-CrowdfundingCard__progressBar {
    padding: 0 0.625rem;
    margin-bottom: 1.25rem;
  }

  .c0 .k-CrowdfundingCard__progressBar__percent {
    display: inherit;
  }

  .c0.k-CrowdfundingCard--titlesMinHeight .k-CrowdfundingCard__titleAndDesc {
    min-height: 4.6875rem;
  }

  .c0 .k-CrowdfundingCard__state {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<div
  className="c0 k-CrowdfundingCard k-Card k-Card--light k-Card--withoutBoxShadowOnHover k-CrowdfundingCard--titlesMinHeight"
  href={null}
  onClick={[Function]}
  title="Lorem ipsum…"
>
  <div
    className="k-CrowdfundingCard__image"
  >
    <div
      className="k-CrowdfundingCard__image__imageContainer"
      style={null}
    >
      <video
        autoPlay={true}
        className="c1 k-CrowdfundingCard__image__image testClass"
        loop={false}
        muted={false}
        playsInline={true}
        poster={null}
      >
        <source
          src="#videoFile.mp4"
          type="video/mp4"
        />
        <source
          src="#videoFile.webm"
          type="video/webm"
        />
      </video>
    </div>
    <div
      className="k-CrowdfundingCard__image__ownerContainer"
    >
      <div
        className="k-u-margin-top-single"
      >
        <span
          className="c2 k-ButtonImage k-ButtonImage--regular k-ButtonImage--withoutPointerEvents k-CrowdfundingCard__image__avatar"
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="#image"
          />
        </span>
      </div>
      <div
        className="k-CrowdfundingCard__image__owner k-u-margin-top-single"
      >
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-regular k-CrowdfundingCard__image__title"
        >
          Owner title
        </div>
        <div
          className="k-u-color-font1 k-u-size-micro k-u-weight-light k-CrowdfundingCard__image__description"
        >
          Owner description
        </div>
      </div>
    </div>
  </div>
  <div
    className="k-CrowdfundingCard__titleAndDesc"
  >
    
    
    
    
  </div>
  <div
    className="k-CrowdfundingCard__cardButton k-CrowdfundingCard__paddedContainer"
  >
    <button
      className="c3 k-Button k-Button--regular k-Button--helium k-Button--orion k-Button--fit-fluid"
      style={
        Object {
          "--Button-border-radius": null,
        }
      }
      type="button"
    >
      Lorem ipsum
    </button>
  </div>
  <div
    className="k-CrowdfundingCard__state"
  >
    <span
      className="k-u-color-font1 k-u-line-height-normal k-u-size-micro k-u-weight-regular"
    >
      Sur
    </span>
  </div>
  
</div>
`;
